[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/player/SpeachBubble.gd" type="Script" id=1]
[ext_resource path="res://audio/effects/low_beep.wav" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=2]
size = 6
extra_spacing_top = -2
extra_spacing_bottom = -2
font_data = SubResource( 1 )

[node name="SpeachBubble" type="Node2D"]
script = ExtResource( 1 )

[node name="SpeechBubble" type="Label" parent="."]
margin_right = 58.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hello this is my test
speech bubble"
align = 1
autowrap = true
percent_visible = 0.0

[node name="Timer" type="Timer" parent="SpeechBubble"]
wait_time = 0.1
autostart = true

[node name="WaitTimer" type="Timer" parent="SpeechBubble"]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="SpeechBubble/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpeechBubble/WaitTimer" to="." method="_on_WaitTimer_timeout"]
